# hdzero-goggle

./: .gitignore  CMakeLists.txt  setup.sh  toolchain.cmake
lib/alsa-lib/: CMakeLists.txt
lib/alsa-lib/patches/: 002-add-muslabihf.patch
lib/softwinner/: CMakeLists.txt
lib/softwinner/include/audio/: adecoder.h  audio_hw.h
lib/softwinner/include/audio/osal/: alib_utils.h
lib/softwinner/include/cedarc/: cdc_config.h  memoryAdapter.h
lib/softwinner/include/cedarx/: CdxBuffer.h  CdxMessage.h  CdxMeta.h  CdxQueue.h  CdxTypes.h
lib/softwinner/include/component/: AudioEnc_Component.h
lib/softwinner/include/config/: mpp_version.h
lib/softwinner/include/demux/: DemuxTypeMap.h  aw_demux.h  cedarx_demux.h
lib/softwinner/include/isp/: isp_comm.h  isp_dev.h  isp_manage.h  isp_tuning.h  isp_tuning_priv.h  isp_version.h  video.h
lib/softwinner/include/media/: mm_common.h  mpi_eis.h  mpi_isp.h
lib/softwinner/include/parser/: CdxParser.h
lib/softwinner/include/stream/: CdxSeqBuffer.h  CdxStream.h
lib/softwinner/include/system/: hwdisplay.h
lib/softwinner/include/textenc/: TextEncApi.h
lib/softwinner/include/utils/: plat_math.h
lib/softwinner/src/algo/include/: DataTypesNew.h  EIS_common.h  EIS_lib.h
lib/softwinner/src/audio/: AudioDec_Decode.c  adecoder.c  aencoder.c  alsa_interface.c  audio_hw.c  bufferMessager.c  cedar_abs_packet_hdr.c  pcmBufferManager.c  pcm_enc.c
lib/softwinner/src/cedarc/base/: CdcIonUtil.c  CdcMessageQueue.c  CdcMessageQueue.h  CdcSysinfo.c  cdc_version.h
lib/softwinner/src/cedarc/memory/: memoryAdapter.c
lib/softwinner/src/cedarc/vdecoder/: fbm.c  pixel_format.c  sbm.h  vdecoder.c
lib/softwinner/src/cedarc/vencoder/: BitstreamManager.c  EncAdapter.c  FrameBufferManager.c  vencoder.c
lib/softwinner/src/cedarx/: AwMessageQueue.c  AwPool.c  CdxBitReader.c  CdxBuffer.c  CdxDebug.c  CdxKeyedVector.c  CdxMessage.c  CdxMeta.c  CdxParseUrl.c  CdxQueue.c  CdxSocketUtil.c  CdxStrUtil.c  CdxSysinfo.c  SmartDnsService.c
lib/softwinner/src/component/: AIChannel_Component.c  AOChannel_Component.c  AudioDec_Component.c  AudioEnc_Component.c  Clock_Component.c  Demux_Component.c  RecAVSync.c  RecRenderSink.c  RecRender_Component.c  RecRender_cache.c  TextEnc_Component.c  UvcVirVi_Component.c  VideoDec_Component.c  VideoDec_InputThread.c  VideoEIS_Component.c  VideoEnc_Component.c  VideoISE_Component.c  VideoRender_Component.c  VideoVirVi_Component.c  mm_component.c
lib/softwinner/src/demux/: DemuxTypeMap.c  aw_demux.cpp  cedarx_demux.c
lib/softwinner/src/fswriter/: FsCache.c  FsSimpleCache.c  FsWriteDirect.c  FsWriter.c
lib/softwinner/src/iniparser/: iniparserapi.c
lib/softwinner/src/ion/: ion_memmanager.c
lib/softwinner/src/isp/: isp.c  isp.h
lib/softwinner/src/isp/isp_cfg/: isp_ini_parse.c
lib/softwinner/src/isp/isp_dev/: isp_dev.c  media.c  media.h  video.c
lib/softwinner/src/isp/isp_events/: events.c
lib/softwinner/src/isp/isp_manage/: isp_helper.c  isp_manage.c
lib/softwinner/src/isp/isp_math/: isp_math_util.c  isp_math_util.h  matrix.c
lib/softwinner/src/isp/isp_tuning/: isp_tuning.c
lib/softwinner/src/media/: ChannelRegionInfo.c  mpi_adec.c  mpi_ae.c  mpi_aenc.c  mpi_af.c  mpi_ai.c  mpi_ao.c  mpi_awb.c  mpi_clock.c  mpi_demux.c  mpi_eis.c  mpi_ise.c  mpi_isp.c  mpi_mux.c  mpi_region.c  mpi_sys.c  mpi_tenc.c  mpi_uvc.c  mpi_vdec.c  mpi_venc.c  mpi_vi.c  mpi_vo.c
lib/softwinner/src/muxer/aac_muxer/: AacMuxer.c  AacMuxer.h
lib/softwinner/src/muxer/mp3_muxer/: Mp3Muxer.c  Mp3Muxer.h
lib/softwinner/src/muxer/mp4_muxer/: ByteIOContext.c  Mp4Muxer.c  Mp4Muxer.h  Mp4MuxerDrv.c  avc.c  hevc.c  mp4_mux_lib.h  sa_config.c  sa_config.h
lib/softwinner/src/muxer/mpeg2ts_muxer/: Mpeg2tsMuxer.c  Mpeg2tsMuxer.h  Mpeg2tsMuxerDrv.c  Mpeg2tsMuxer_cfg.h
lib/softwinner/src/muxer/muxers/: record_writer.c
lib/softwinner/src/muxer/raw_muxer/: RawMuxer.c  RawMuxer.h
lib/softwinner/src/parser/AwRawStream/: AwRawStreamParser.c
lib/softwinner/src/parser/AwSpecialStream/: AwSpecialStreamParser.c
lib/softwinner/src/parser/aac/: CdxAacParser.c
lib/softwinner/src/parser/aiff/: CdxAiffParser.c  CdxIoUtils.h
lib/softwinner/src/parser/amr/: CdxAmrParser.c
lib/softwinner/src/parser/ape/: CdxApeParser.c  CdxApeParser.h
lib/softwinner/src/parser/asf/: AsfParser.c  AsfParserItf.c
lib/softwinner/src/parser/atrac/: CdxAtracParser.c
lib/softwinner/src/parser/avi/: CdxAviDepack.c  CdxAviDepackIndex.c  CdxAviDepackSequence.c  CdxAviIdx1.c  CdxAviInclude.h  CdxAviOdmlIndx.c  CdxAviParser.c  CdxCheckStreamPara.c
lib/softwinner/src/parser/awts/: AwtsParser.c
lib/softwinner/src/parser/base/: CdxParser.c  Id3Base.c  StringContainer.c  VideoSpecificData.c
lib/softwinner/src/parser/bd/: CdxBdParser.c
lib/softwinner/src/parser/caf/: CdxCafParser.c
lib/softwinner/src/parser/dash/: CdxDashParser.c  CdxMpd.c
lib/softwinner/src/parser/dsd/: CdxDsdParser.c
lib/softwinner/src/parser/flac/: CdxFlacParse.c
lib/softwinner/src/parser/flv/: CdxFlvParser.c
lib/softwinner/src/parser/g729/: CdxG729Parser.c
lib/softwinner/src/parser/hls/: CdxHlsParser.c  M3UParser.c
lib/softwinner/src/parser/id3v2/: CdxId3v2Parser.c
lib/softwinner/src/parser/m3u9/: CdxM3u9Parser.c  M3U9Parser.c
lib/softwinner/src/plugin/: cdx_plugin.c
lib/softwinner/src/render/: CedarXNativeRenderer.cpp  CedarXNativeWindowRenderer.cpp  CedarXSoftwareRenderer.cpp  video_render.c  video_render_linux.cpp
lib/softwinner/src/stream/: cedarx_outstream_external.c  cedarx_stream.c
lib/softwinner/src/system/: hwdisplay.c
lib/softwinner/src/textenc/: TextEncApi.c
lib/softwinner/src/utils/: BITMAP_S.c  CedarXMetaData.cpp  EPIXELFORMAT_g2d_format_convert.c  PIXEL_FORMAT_E_g2d_format_convert.c  SystemBase.c  VIDEO_FRAME_INFO_S.c  cedarx_avs_counter.c  dup2SeldomUsedFd.c  generic_buffer.c  iio_utils.c  media_common.c  mm_comm_venc.c  mpi_videoformat_conversion.c  ring_buffer.c  ring_buffer.h  tmessage.c  tsemaphore.c  video_buffer_manager.c
lib/softwinner/src/videoin/: VIPPDrawOSD_V5.c  uvcInput.c  videoInputHw.c
lib/zlib/: CMakeLists.txt
src/core/: common.c  (+24 more)
(+166 files in other folders)
